--- a/angular.json
+++ b/angular.json
@@ -64,7 +64,10 @@
               "projects/web/src/favicon.ico",
               "projects/web/src/assets"
             ],
-            "styles": ["projects/web/src/styles.scss"],
+            "styles": [
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "projects/web/src/styles.scss"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -119,7 +122,10 @@
               "projects/web/src/favicon.ico",
               "projects/web/src/assets"
             ],
-            "styles": ["projects/web/src/styles.scss"],
+            "styles": [
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "projects/web/src/styles.scss"
+            ],
             "scripts": []
           }
         }
@@ -150,7 +156,10 @@
               "projects/admin/src/favicon.ico",
               "projects/admin/src/assets"
             ],
-            "styles": ["projects/admin/src/styles.scss"],
+            "styles": [
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "projects/admin/src/styles.scss"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -205,7 +214,10 @@
               "projects/admin/src/favicon.ico",
               "projects/admin/src/assets"
             ],
-            "styles": ["projects/admin/src/styles.scss"],
+            "styles": [
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "projects/admin/src/styles.scss"
+            ],
             "scripts": []
           }
         }
