--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "json": "json-server api/db.json",
+    "json": "json-server --port 5500 api/db.json",
     "watch": "ng build library --watch --configuration production",
     "web": "ng serve web --o --port 3500",
     "admin": "ng serve admin --o --port 4500"
