--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build-web": "ng build web --configuration production",
     "build-library": "ng build library --watch",
     "buildlib": "ng build library",
-    "build-compress": "ng build web --configuration production --optimization=true && gzipper --verbose ./dist"
+    "build-compress": "ng build web --configuration production --optimization=true && gzipper --verbose ./dist",
+    "build-both": "npm run build-admin && npm run build-web && np run build-library"
   },
   "private": true,
   "dependencies": {
