--- a/package.json
+++ b/package.json
@@ -10,11 +10,7 @@
     "web": "ng serve web --o --port 3500",
     "admin": "ng serve admin --o --port 4500",
     "build-admin": "ng build admin --configuration production",
-    "build-web": "ng build web --configuration production",
-    "build-library": "ng build library --watch",
-    "buildlib": "ng build library",
-    "build-compress": "ng build web --configuration production --optimization=true && gzipper --verbose ./dist",
-    "build-both": "npm run build-admin && npm run build-web && npm run build-library"
+    "build-web": "ng build web --configuration production"
   },
   "private": true,
   "dependencies": {
